backend/deploy/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: http-api
spec:
  host: ""
  path: "/api/v1"
  to:
    kind: Service
    name: api
  tls:
    termination: edge
  port:
    targetPort: 8080
